# hydrantic

./: .gitignore  LICENSE  README.md  config_blueprint.yaml  pyproject.toml
.github/workflows/: docs.yml  pip-install.yml  pytest.yml
docs/: cli.md  conf.py  getting_started.md  hydrantic.cli.rst  hydrantic.data.rst  hydrantic.hparams.rst  hydrantic.model.rst  hydrantic.rst  hydrantic.tests.rst  hydrantic.utils.rst  index.md  installation.md  modules.rst
src/hydrantic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hydrantic/cli/: fit.py  hparams.py  main.py  profile.py
src/hydrantic/data/: __init__.py  data.py  hparams.py
src/hydrantic/hparams/: __init__.py  hparams.py  module.py
src/hydrantic/hparams/tests/unit/: test_hparams.py
src/hydrantic/model/: __init__.py  hparams.py  model.py
src/hydrantic/runner/: hparams.py  run.py
src/hydrantic/tests/: conftest.py  test_data.py  test_data_hparams.py  test_hparams.py  test_model.py  test_model_hparams.py  test_utils.py
src/hydrantic/utils/: attribute_dict.py  utils.py
