[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrantic"
description = """
Hydrantic ...
"""
readme = "README.md"
version = "0.0.1"
requires-python = ">= 3.8"
dependencies = [
    "hydra-core~=1.3.2",
    "pydantic~=2.10.3",
    "torch~=2.5.1",
    "lightning~=2.4.0",
    "wandb~=0.19.1",
    "pytest~=8.3.4"
]