[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrantic"
description = """
Hydrantic ...
"""
readme = "README.md"
version = "0.0.2"
requires-python = ">= 3.8"
dependencies = [
    "hydra-core~=1.3.2",
    "pydantic~=2.10.3",
    "torch>=2.0.0",
    "lightning~=2.4.0",
    "wandb~=0.19.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
"hydrantic.cli" = "hydrantic.cli.main:main"
"hydrantic.cli.fit" = "hydrantic.cli.fit:main"
"hydrantic.cli.profile" = "hydrantic.cli.profile:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

